syntax = "proto3";

option csharp_namespace = "PricingTf.WebApi";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package pricingTf;

service Pricing {
  rpc GetPricing (ItemRequest) returns (ItemPricing);
  rpc GetBotPricing (ItemRequest) returns (ItemPricing);
  rpc GetKeyExchangeRate (google.protobuf.Empty) returns (KeyExchangeRate);
}

message ItemRequest {
  string name = 1;
}

message TradeDetails {
  string listingId = 1;
  string tradeOfferUrl = 2;
}

message PricingDetails {
  double price = 1;
  TradeDetails tradeDetails = 2;
}

message ItemPricing {
  string name = 1;
  optional PricingDetails buy = 2;
  optional PricingDetails sell = 3;
  google.protobuf.Timestamp updatedAt = 4;
}

message KeyExchangeRate {
  double metal = 1;
  google.protobuf.Timestamp updatedAt = 2;
}